# ATLAS

./: .gitignore  ATLAS_poster.pptx  DIAGRAM_PROMPTS.md  LLMS_AND_UAMI_COMPARISON.md  README.md  TOOLBENCH_RESULTS_SUMMARY.md  paper_starter.tex  references.bib  research_plan.md
atlas_agent/: README.md  pyproject.toml  requirements.txt
atlas_agent/atlas_agent/: __init__.py  benchmark.py  cli.py  config.py  core.py  datasets.py  evaluation.py  llm.py  logging_utils.py  memory.py  reporting.py  runner.py  schemas.py  tools.py
atlas_agent/atlas_agent/data/: sample_knowledge_base.txt
atlas_agent/atlas_agent/utils/: token_count.py
atlas_agent/config/: prompts_apibank.json
atlas_agent/models/: router.pkl
atlas_agent/scripts/: eval_with_router.py  run_router_benchmark.py  train_router.py
atlas_agent/tests/: test_benchmark.py  test_core.py  test_datasets.py  test_memory.py
